<resources>
    <string name="filedownloader_title">手游视界提醒您</string>
    <string name="filedownloader_content">下载任务将消耗较多流量，建议使用wifi下载，土豪可无视。</string>
    <string name="filedownloader_wifi">wifi下载</string>
    <string name="filedownloader_continue">继续下载</string>
    <string name="net_disable">当前网络不可用，请检查后重试</string>
    <string name="net_unstable">当前网络环境不佳，请连接WiFi后重试</string>
    <string name="update_cancel">取消</string>
    <string name="update_now">立即更新</string>
    <string name="update_new">已是最新版本</string>
    <string name="applicationdownload_title">下载管理</string>
    <string name="applicationdownload_resume">继续</string>
    <string name="applicationdownload_open">打开</string>
    <string name="applicationdownload_update">更新</string>
    <string name="applicationdownload_download">下载</string>
    <string name="applicationdownload_install">安装</string>
    <string name="applicationdownload_error">下载出错</string>
    <string name="applicationdownload_morefun">让视频更好玩</string>
    <string name="applicationdownload_open_opened">已经打开手游视界</string>
    <string name="applicationdownload_go_to_download_manager">可到下载管理查看情况</string>
    <string name="manufacturer_title">设置悬浮窗</string>
    <string name="manufacturer_content_huawei">您所使用的是华为设备，须在: \n"手机管家 >> 设置 >> 悬浮窗管理 >> 录屏大师 >> 打勾 \n将浮窗打开才能正常使用</string>
    <string name="manufacturer_content_miui">您的系统是MIUI，请到“安全中 >> 应用权限管 >> 录屏大 >> 悬浮窗权 >> 允许 \n将浮窗打开才能正常使用</string>
    <string name="manufacturer_content_oppo">您的系统是OPPO，手机桌面→手机管家（安全中心）→权限管理→悬浮窗管理→录屏大师（找到后设置允许）</string>
    <string name="manufacturer_content_meizu">您的系统是Flyme，请到“设置 >> 应用管理 >> 录屏大师 >> 权限管理 >> 打勾 \n将浮窗打开才能正常使用</string>
    <string name="manufacturer_cancel">取消</string>
    <string name="manufacturer_confirm">前往设置</string>
    <string name="screenrecord_title">录屏大师</string>
    <string name="screenrecord_landscape">横屏游戏录制</string>
    <string name="screenrecord_landscape_tip">横屏录制已打开</string>
    <string name="screenrecord_portrait">竖屏游戏录制</string>
    <string name="screenrecord_portrait_tip">竖屏录制已打开</string>
    <string name="settingquality_title">清晰度设置</string>
    <string name="settingquality_cancel">取消</string>
    <string name="settingquality_low">低清</string>
    <string name="settingquality_standard">标清</string>
    <string name="settingquality_high">高清</string>
    <string name="settingquality_ultrahigh">超高清</string>
    <string name="record_cannot_change_floatingwindiws">正在录屏中，无法修改</string>
    <string name="capturing_success">截图成功</string>
    <string name="shake_not_support">抱歉，此设备不支持摇晃录屏</string>
    <string name="recording_failure">录屏失败，请重启录屏大师再试</string>
    <string name="recording_title">录屏服务已启动</string>
    <string name="recording_success">视频已合成，请前往视频管理查看</string>
    <string name="recording_frontcamera_open">主播模式已启动</string>
    <string name="root_title">Root权限</string>
    <string name="root_content">您的设备尚未开启Root权限，请获取Root权限后再重启本应用程序。</string>
    <string name="root_confirm">确定</string>
    <string name="floatview_screenrecord_start">录制</string>
    <string name="floatview_screencapture">截图</string>
    <string name="floatview_frontcamera_open">打开主播</string>
    <string name="floatview_frontcamera_close">关闭主播</string>
    <string name="floatview_main">主页</string>
    <string name="floatview_screenrecord_pause">暂停</string>
    <string name="floatview_screenrecord_resume">继续</string>
    <string name="floatview_screenrecord_stop">停止</string>
    <string name="button_cal">取消</string>
    <string name="button_ok">确定</string>
    <string name="connect_device_succeed">连接成功</string>
    <string name="connecting_device">正在连接</string>
    <string name="connect_device_error">连接错误，请重新再试</string>
    <string name="down_device_error">下载失败，请重新再试</string>
    <string name="wait_down_apk">等待电视更新乐播投屏…</string>
    <string name="down_apk_succeed">下载成功，请在电视端安装</string>
    <string name="no_net_connect">没有连接到网络</string>
    <string name="down_happly_tv">下载\"乐播投屏\"</string>
    <string name="search_device_happly_tv">正在寻找设备</string>
    <string name="downing_happly_tv">APK正在下载…</string>
    <string name="down_seccuse_happly_tv">APK下载完成</string>
    <string name="tv_telecontrol_tx">让您的手机同屏到电视上</string>
    <string name="device_choose_title">选择设备,把视频投到电视上看</string>
    <string name="videomanagerimport_title">导入外部视频</string>
    <string name="videomanagerimport_confirm">导入</string>
    <string name="videomanagerimport_end">已导入</string>
    <string name="videomanagerrename_title">重命名文件</string>
    <string name="videomanagerrename_hint">请输入文件名</string>
    <string name="videomanagerrename_cancel">取消</string>
    <string name="videomanagerrename_confirm">确定</string>
    <string name="videomanagercopy_title">复制文件</string>
    <string name="videomanagercopy_hint">请输入视频名称</string>
    <string name="videomanagercopy_tip_empty">视频名称不能为空</string>
    <string name="videomanagercopy_tip_remane">视频名称已存在，请重新命名</string>
    <string name="videoeditor_title">视频编辑</string>
    <string name="videoeditor_save">保存</string>
    <string name="videoeditor_cancel">取消</string>
    <string name="videoeditor_editor">剪辑</string>
    <string name="videoeditor_subtitle">字幕</string>
    <string name="videoeditor_audio">配音</string>
    <string name="videoeditor_cover">封面</string>
    <string name="videoeditor_normal">切换到普通编辑模式</string>
    <string name="videoeditor_advanced">切换到高级编辑模式</string>
    <string name="videoeditor_tip_audiorecording">正在录音...</string>
    <string name="videoeditor_tip_addsubtitle">正在添加字幕...</string>
    <string name="videoeditor_hint_edit">点击输入文字</string>
    <string name="editor_introduce">点击“剪辑”剪去阴影部分</string>
    <string name="editor_cut">剪辑</string>
    <string name="editor_cut_tip_exit">视频文件不存在</string>
    <string name="editor_cut_tip_error">剪辑出错</string>
    <string name="editor_cut_tip_time">剪辑的视频长度不能小于10s</string>
    <string name="editor_cut_tip_file">保存文件出错</string>
    <string name="editor_cut_tip_success">剪辑成功</string>
    <string name="editor_cut_tip_failed">剪辑失败</string>
    <string name="audio_text">录音中...需要正常放完视频才能完成配音工作，不能提前结束</string>
    <string name="audio_original">原声</string>
    <string name="audio_recording_start">开始</string>
    <string name="audio_recording_stop">取消</string>
    <string name="audio_mux_tip_success">配音成功</string>
    <string name="audio_mux_tip_failed">配音失败</string>
    <string name="subtitle_add">添加</string>
    <string name="subtitle_confirm">确定</string>
    <string name="subtitle_tip_srt_not_empty">字幕不能为空</string>
    <string name="subtitle_content">添加的字幕与其他字幕有重复，是否覆盖之前的字幕</string>
    <string name="uploadvideo_content">当前手机处于非WIFI环境，上传视频将消耗一定的手机流量,是否上传视频？</string>
    <string name="uploadvideo_cancel">取消</string>
    <string name="uploadvideo_confirm">确定</string>
    <string name="videoshare_tag">#标签#</string>
    <string name="tag_title">选择标签</string>
    <string name="tag_title_1">请选择标签</string>
    <string name="tag_confirm">完成</string>
    <string name="tag_title_1_tip">(添加视频标签，更容易被关注哦)</string>
    <string name="had_select">已选</string>
    <string name="videoshare_description_1">请输入标题：完整的标题更吸引人</string>
    <string name="imageshare_type_2">请选择类型</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_empty_hint_text">没有数据</string>
    <string name="app_name">手游视界</string>
    <string name="menu_main_first">首页</string>
    <string name="menu_main_second">游戏圈</string>
    <string name="menu_main_third">发现</string>
    <string name="menu_main_fourth">赛事</string>
    <string name="ab_search_hint">请输入游戏名、视频名</string>
    <string name="ab_search_hint2">请输入玩家名、游戏名或视频关键字搜索</string>
    <string name="appstart_play">玩手游  看视界</string>
    <string name="appstart_readme">手游视界 © 2018 17sysj.com</string>
    <string name="search_history">搜索记录</string>
    <string name="search_clear">清空记录</string>
    <string name="search_hot">热门搜索</string>
    <string name="adddanmuku_hint">首长，有什么指示？</string>
    <string name="welcome_gointo">立即体验</string>
    <string name="slider_mywelfare">我的福利</string>
    <string name="slider_myvideo">视频管理</string>
    <string name="slider_mycollection">我的收藏</string>
    <string name="slider_mytask">我的任务</string>
    <string name="slider_setup">设置</string>
    <string name="slider_focus">关注</string>
    <string name="slider_fans">粉丝</string>
    <string name="slider_customer">客服</string>
    <string name="scanqrcode_title">扫一扫</string>
    <string name="scanqrcode_cancel">取消</string>
    <string name="scanqrcode_tip">将取景框对准二维码\n即可自动扫描</string>
    <string name="scanqrcode_photo">相册</string>
    <string name="scanqrcode_light_on">开灯</string>
    <string name="scanqrcode_light_off">关灯</string>
    <string name="scanqrcode_qrcode">我的二维码</string>
    <string name="recommend_title">玩家精选</string>
    <string name="discover_recommend">玩家精选</string>
    <string name="discover_square">玩家广场</string>
    <string name="discover_message">消息</string>
    <string name="discover_billboard">风云榜</string>
    <string name="discover_dynamic">动态</string>
    <string name="discover_game">游戏</string>
    <string name="welfare_left">热门赛事</string>
    <string name="welfare_middle">热门活动</string>
    <string name="welfare_right">热门礼包</string>
    <string name="home_hotgame">热门游戏</string>
    <string name="home_youlike">猜你喜欢</string>
    <string name="home_switch">换一换</string>
    <string name="home_hotnarrate">热门解说</string>
    <string name="game_left">手游分类</string>
    <string name="game_right">我的游戏</string>
    <string name="square_title">玩家广场</string>
    <string name="square_left">最新</string>
    <string name="square_right">热门</string>
    <string name="classifiedgame">分类选择</string>
    <string name="classifiedgame_new">最新游戏</string>
    <string name="classifiedgame_hot">最热游戏</string>
    <string name="homemore_new">最新</string>
    <string name="homemore_hot">最热</string>
    <string name="collection_title">收藏</string>
    <string name="collection_top_left">我的收藏</string>
    <string name="collection_top_right">观看记录</string>
    <string name="collection_bottom_left">全选</string>
    <string name="collection_bottom_left_un">取消全选</string>
    <string name="collection_bottom_right">删除</string>
    <string name="collection_cancel">取消</string>
    <string name="reportresult_confirm">确定</string>
    <string name="reportresult_first">举报已提交</string>
    <string name="reportresult_second">感谢您的参与，手游视界坚决反对色情，违法等违规信息，我们会认真处理您的举报，维护绿色，健康的网络环境</string>
    <string name="videomanager_allSelected">全选</string>
    <string name="videomanager_saveToAlbum">保存到相册</string>
    <string name="videomanager_delete">删除</string>
    <string name="photo_pick">从相册选择</string>
    <string name="photo_take">拍一张</string>
    <string name="photo_cancel">取消</string>
    <string name="share_share">分享</string>
    <string name="share_report">举报</string>
    <string name="share_cancel">取消</string>
    <string name="mytask_level_title_first">手游世界的等级体系是什么？</string>
    <string name="mytask_level_title_content_first">视界等级是手游视界独有的一套等级系统，根据经验累积值来获取等级的提升，帐号等级越高，可享受的等级福利越多。</string>
    <string name="mytask_level_title_second">如何提升帐号等级？</string>
    <string name="mytask_level_title_content_second">目前手游视界设置的帐号等级最高为48级，视友可以通过完成每日的成长任务和系统任务来获取经验值。</string>
    <string name="exp2sd_task_text">\t\t个人任务将在后续版本更新为更有价值的视豆任务，个人经验值将按一定规则转化为视豆，敬请期待！</string>
    <string name="exp2sd_greetings">亲爱的用户:</string>
    <string name="exp2sd_isee">知道了</string>
    <string name="phone_upload_video">账号安全等级太低，请绑定手机后再分享</string>
    <string name="phone_hint_phone">请输入手机号</string>
    <string name="phone_hint_code">请输入验证码</string>
    <string name="phone_get">获取验证码</string>
    <string name="phone_submit">立即验证</string>
</resources>