<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffff"
              android:gravity="center_horizontal"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f2f2f2"/>

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/reportresult_tick"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportresult_first"
        android:layout_marginTop="34dp"
        android:textSize="15sp"
        android:textColor="#565656"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="255dp"
        android:text="@string/reportresult_second"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:textSize="12sp"
        android:textColor="#696969"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:maxWidth="192dp"
        android:text="@string/reportresult_confirm"
        android:gravity="center"
        android:enabled="true"
        android:clickable="true"
        android:onClick="doBack"
        android:background="@drawable/reportresult_confirm"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:textSize="14sp"
        android:textColor="#ffffff"/>
</LinearLayout>