<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:orientation="vertical"
              android:descendantFocusability="blocksDescendants" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f2f2f2"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:background="#ffffff"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/videomanager_allSelected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:gravity="center"
            android:text="@string/videomanager_allSelected"
            android:textColor="#6e6e6e"
            android:textSize="12dp"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/videomanager_saveToAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:gravity="center"
            android:text="@string/videomanager_saveToAlbum"
            android:textColor="#6e6e6e"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/videomanager_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:gravity="center"
            android:text="@string/videomanager_delete"
            android:textColor="#ff0000"
            android:textSize="12dp"/>

    </LinearLayout>

</LinearLayout>